# currency

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-redis.yaml  docker-compose.yaml  nginx_loc.conf  pyproject.toml
src/config/: asgi.py  celery.py  settings.py  urls.py
src/currency/: consumers.py  routing.py  tasks.py  urls.py  utils.py  views.py
src/currency/templates/currency/: index.html
src/static/currency/: main.js
