[tool.poetry]
name = "currency"
version = "0.1.0"
description = "Тестовое задание создания эндпоинта для получения курса доллара к рублю."
authors = ["Kozin Artem <grot_artem@inbox.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
channels = {extras = ["daphne"], version = "^4.1.0"}
celery = {extras = ["redis"], version = "^5.4.0"}
channels-redis = "^4.2.0"
requests = "^2.32.3"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
mypy = "^1.10.1"
django-stubs = "^5.0.2"
pre-commit = "^3.7.1"
types-requests = "^2.32.0.20240622"
types-redis = "^4.6.0.20240425"
celery-stubs = "^0.1.3"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
